# qa-mcp-harness

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  qa-mcp-harness-project.md
harness/: __init__.py  config.py  report.py
harness/clients/: mcp_client.py
harness/eval/: __init__.py  agent_loop.py  dataset.py  dataset_l4.py  dataset_l5.py  diff_l5.py  matching.py  oracles.py  prompts.py  redteam.py  runner.py  runner_l4.py  runner_l5.py  schema_convert.py
harness/providers/: __init__.py  anthropic.py  base.py  fake.py  gemini.py  openai_compat.py  registry.py
system_prompts/: bare.md  default.md  hardened.md
targets/: example-http.toml  qa-toolkit-local.example.toml  qa-toolkit-local.toml  vuln-lab.example.toml
tests/: conftest.py
tests/layer2_contract/: test_contract_smoke.py  test_qa_toolkit_contract.py
tests/layer3_toolcalling/: README.md  test_dataset.py  test_matching.py  test_prompts.py  test_report.py  test_runner_fake_model.py  test_runner_integration.py  test_schema_convert.py
tests/layer3_toolcalling/datasets/: qa_toolkit.example.jsonl
tests/layer4_output/: README.md  test_agent_loop.py  test_integration_l4.py  test_oracles.py  test_report_l4.py
tests/layer4_output/datasets/: qa_toolkit.example.jsonl
tests/layer5_security/: test_detectors.py  test_diff_l5.py  test_report_l5.py  test_runner_l5.py
tests/providers/: test_anthropic_adapter.py  test_base.py  test_fake.py  test_gemini_adapter.py  test_openai_adapter.py  test_registry.py
vuln_lab/: __init__.py  server.py
(+1 files in other folders)
