[project]
name = "qa-mcp-harness"
version = "0.1.0"
description = "Generic, black-box test harness for MCP servers: contract, tool-calling, and output layers."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Gabriel Thomas" }]
dependencies = [
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
# Layer 3 (tool-calling evals) drives a real model. Install with: pip install -e ".[dev,llm]"
# - anthropic: the paid-API provider.
# - openai:    used as the client for the local Ollama provider (OpenAI-compatible API).
llm = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "google-genai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: drives a real LLM; needs ANTHROPIC_API_KEY + HARNESS_MODEL",
]
